add owner_id to gym
