# docs/swagger.json
@@ -411,6 +411,12 @@
                         "description": "Type Gender",
                         "name": "type_gender",
                         "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Owner Id",
+                        "name": "owner_id",
+                        "in": "query"
                     }
                 ],
                 "responses": {
